[package]
name = "traffic-thrust"
description = "Python binding to trafficrs core functions (Rust version of traffic)"
repository = "https://github.com/xoolive/traffic-rs"
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
exclude = [
    "__pycache__",
    "**/__pycache__",
    "**/__pycache__/**",
    "*.pyc",
    "**/*.pyc",
]

[lib]
name = "thrust"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.23.0"
polars = { version = "0.46.0", features = ["lazy", "rolling_window"] }
polars-core = "0.46.0"
pyo3 = "0.23.4"
pyo3-polars = "0.20.0"
trafficrs = { version = "0.1.0", path = "../crates/trafficrs" }

[dev-dependencies]
chrono = "0.4.38"
