[package]
name = "thrust-py"
description = "Python binding to trafficrs core functions (Rust version of traffic)"
repository = "https://github.com/xoolive/thrust"
readme = "readme.md"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
exclude = [
    "__pycache__",
    "**/__pycache__",
    "**/__pycache__/**",
    "*.pyc",
    "**/*.pyc",
]


[lib]
name = "thrust"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.26.0"
polars = { version = "0.52.0", features = ["lazy", "rolling_window"] }
polars-core = "0.52.0"
pyo3 = "0.26.0"
pyo3-polars = "0.25.0"
traffic-thrust = { version = "0.1.0", path = "../crates/thrust", features = [
    "polars",
] }

[dev-dependencies]
chrono = "0.4.38"
