[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "thrust"
requires-python = ">=3.10"
dependencies = ["pandas>=2.2.0", "polars>=1.4.1", "traffic>=2.12"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
module-name = "thrust.core"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "Cargo.toml" },
  { file = "../Cargo.toml" },
  { file = "../**/*.rs" },
]

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "ruff>=0.7.2",
  "vl-convert-python>=1.7.0",
]

[tool.ruff]
lint.select = [
  "E",
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF",
]
line-length = 80
target-version = "py310"

[tool.mypy]
python_version = "3.10"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "pytest>=8.3.2", "ruff>=0.5.6"]

[tool.pytest.ini_options]
addopts = "--log-level=INFO --color=yes"

[project.urls]
repository = "https://github.com/xoolive/traffic-rs"
